Fixed horizontal scroll bar issue???

--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -1,6 +1,7 @@
 .main-navigation {
 	display: block;
 	width: 100%;
+	overflow: hidden;
 
 	ul {
 		display: none;
@@ -63,7 +64,7 @@
         text-transform: uppercase;
         line-height: 1rem;
         letter-spacing: 3px;
-        padding: 9px 20px;
+        padding: 9px 10px;
         &:hover{
             background-color: $accent_colour;
         }
@@ -124,6 +125,12 @@
 			padding: 0px 25px;
 		}
     }
+}
+
+@media (min-width: $breakpoint-desktop) {
+	.main-navigation a {
+		padding: 9px 20px;
+	}
 }
 
 .comment-navigation,
