--- a/sass/layouts/_body-layout.scss
+++ b/sass/layouts/_body-layout.scss
@@ -73,7 +73,7 @@
 }
 
 .sneak-peek-article {
-  width: 100%;
+  width: 90%;
   margin: auto;
   margin: 30px;
 }
